--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Step 1
         uses: actions/checkout@v4
       - name: Step 2
-        run: env | Sort
+        run: env | sort
   job2:
     name: Second job
     runs-on: windows-latest
